updated navigation bar to be cuter and simpler

--- a/index.html
+++ b/index.html
@@ -28,20 +28,21 @@
    <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+<!--         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html"> Tola Oniyangi <br>
+        </button> -->
+        <a class="navbar-brand" href="index.html"> tola oniyangi <br>
           <span class="subtitle">   
-            <span id="design"> designer , </span><!--  <span id="vis"> visualization ,</span> --> <span id="analysis"> researcher </span> 
+            <span id="design"> designer </span> + <span id="analysis"> researcher </span> 
           </span>
         </a>
       </div>
       <!-- navbar collapse  -->
-      <div id="navbar" class="collapse navbar-collapse">
+      <!-- <div id="navbar" class="collapse navbar-collapse"> -->
+      <div id="navbar">
         <ul class="nav navbar-nav">
           <li class="active"><a href="index.html">Projects</a></li>
           <li><a href="info/about.html">About</a></li>
@@ -60,7 +61,7 @@
 
         <!-- DMC  -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> <div id="vis"> 
+          <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/urbansprawl.html">
               <img src="img/intro_dmc.gif" alt="">
               <h4 class="thumbnailQuestion"> Can a machine learning model be trained to predict the expansion of cities? </h4>
@@ -196,7 +197,7 @@
 
         <!-- Visualization critique datavis  -->
 <!--         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> <div id="vis"> 
+          <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/datasketches.html">
               <img src="img/intro_datasketches.jpg" alt="">
               <h4 class="thumbnailQuestion">  </h4>
@@ -220,7 +221,7 @@
         <!-- IND RESEARCH  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="projects/globaltrajectories.html"><div id="vis"> 
+            <a href="projects/globaltrajectories.html"><div id="analysis"> 
               <!-- <img src="img/intro_IndResearch.gif" alt=""> -->
               <img src="img/indResearch_outsidebook.jpg">
               <h4 class="thumbnailQuestion"> How can we study the relationship between precolonial Africa and the world through the people themselves? </h4>
@@ -231,7 +232,7 @@
         
         <!-- DATASCAPES  -->
         <div class="col-md-4 col-sm-6 item">
-          <div class="thumbnail"> <div id="vis"> 
+          <div class="thumbnail"> <div id="analysis"> 
             <a href="projects/datascapes.html">
               <!-- <img src="img/intro_datascapes.gif" alt=""> -->
               <img src="img/intro_datascapes.jpg" alt="">
