--- a/projects/libraryanalysis.html
+++ b/projects/libraryanalysis.html
@@ -28,24 +28,19 @@
      <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="../index.html">Tola Oniyangi <br>
-            <span class="subtitle"> Analysis, Visualization, Design </span>
+          <a class="navbar-brand" href="index.html"> tola oniyangi <br>
+            <span class="subtitle">   
+              <span id="design"> designer </span> + <span id="analysis"> researcher </span> 
+            </span>
           </a>
         </div>
-        <!-- navbar collapse  -->
-        <div id="navbar" class="collapse navbar-collapse">
+
+        <div id="navbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="../info/about.html">About</a></li>
+            <li class="active"><a href="index.html">Projects</a></li>
+            <li><a href="info/about.html">About</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+        </div>
      </nav>
 
   <!-- side bar sticky  -->
@@ -56,7 +51,7 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2> How can one determine a project’s likely user demographics given its location? </h2>
-          <p> This library <a href="libraryproject.html"  target="_blank"> project </a>  emerges from a rigorous exploration of its immediate context in Dumbo, Brooklyn. Questions delving into the Brooklyn and Manhattan public library systems establish a main frame of understanding. Access emerges as a main factor in determining who would likely use the library, and a series of demographic questions at four levels of access guide this analysis. Questions of accessibility through transportation options, character of the neighborhood, library locations, wealth, and commute time of residents within a successive quarter-mile (approximately 5 minute) to one mile (approximately 20 minute) walking distance along pedestrian streets make up this research. The analysis of Dumbo’s urban condition led to conclusions about the population the library would serve that were integral to the design process. 
+          <p> This library <a href="libraryproject.html"  target="_blank"> project </a>  emerges from a rigorous exploration of its immediate context in Dumbo, Brooklyn. Questions delving into the Brooklyn and Manhattan public library systems establish a main frame of understanding. Access emerges as a main factor in determining who would likely n use the library, and a series of demographic questions at four levels of access guide this analysis. Questions of accessibility through transportation options, character of the neighborhood, library locations, wealth, and commute time of residents within a successive quarter-mile (approximately 5 minute) to one mile (approximately 20 minute) walking distance along pedestrian streets make up this research. The analysis of Dumbo’s urban condition led to conclusions about the population the library would serve that were integral to the design process. 
           </p> 
           <p class="additionalInfo"> Spring 2018. Core II. Critic: Gordon Kipping.
           </p>    
