--- a/info/about.html
+++ b/info/about.html
@@ -28,24 +28,19 @@
      <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="../index.html">Tola Oniyangi <br>
-            <span class="subtitle"> Analysis, Visualization, Design </span>
+          <a class="navbar-brand" href="../index.html"> tola oniyangi <br>
+            <span class="subtitle">   
+              <span id="design"> designer </span> + <span id="analysis"> researcher </span> 
+            </span>
           </a>
         </div>
-        <!-- navbar collapse  -->
-        <div id="navbar" class="collapse navbar-collapse">
+
+        <div id="navbar">
           <ul class="nav navbar-nav">
-            <li><a href="../index.html">Projects</a></li>
-            <li class="active"><a href="../info/about.html">About</a></li>
+            <li class="active"><a href="../index.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+        </div>
      </nav>
 
     <!-- Page Content  -->
