--- a/info/about.html
+++ b/info/about.html
@@ -37,8 +37,8 @@
 
         <div id="navbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../index.html">Projects</a></li>
+            <li class="active"><a href="about.html">About</a></li>
           </ul>
         </div>
      </nav>
