--- a/projects/tech-theatre.html
+++ b/projects/tech-theatre.html
@@ -28,7 +28,7 @@
      <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html"> tola oniyangi <br>
+          <a class="navbar-brand" href="../index.html"> tola oniyangi <br>
             <span class="subtitle">   
               <span id="design"> designer </span> + <span id="analysis"> researcher </span> 
             </span>
@@ -37,8 +37,8 @@
 
         <div id="navbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Projects</a></li>
-            <li><a href="info/about.html">About</a></li>
+            <li class="active"><a href="../index.html">Projects</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div>
      </nav>
