website redesign done for now

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/subway.html">
-              <!-- <img src="img/intro_Subway.gif" alt=""> -->
-              <img src="img/subway_crossSection.png" alt="">
+              <img src="img/intro_Subway.gif" alt="">
+              <!-- <img src="img/subway_crossSection.png" alt=""> -->
               <h4 class="thumbnailQuestion"> Can light and the absence of it, as well as directionality of planes create distinct spaces with particular qualities?  </h4>
               <h3 class="thumbnailTitle"> Processional Planes </h3>
             </a>
