--- a/index.html
+++ b/index.html
@@ -28,26 +28,12 @@
    <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-<!--         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button> -->
         <a class="navbar-brand" href="index.html"> tola oniyangi <br>
           <span class="subtitle">   
             <span id="design"> designer </span> + <span id="analysis"> researcher </span> 
           </span>
         </a>
       </div>
-      <!-- navbar collapse  -->
-      <!-- <div id="navbar" class="collapse navbar-collapse"> -->
-      <div id="navbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">Projects</a></li>
-          <li><a href="info/about.html">About</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
     </div>
    </nav>
 
@@ -58,6 +44,15 @@
    <div class="container main-container">
       <div class="row masonry-container">
         <!-- change col-md-4 to change number of columns on page -->
+
+        <div class="col-md-4 col-sm-6 item">
+          <p class = "basicInfo"> 
+            <span class="highlightInfo"> Dual-degree Architecture and Urban Planning Master's student </span>
+              <span class="basicInfo"> (graduating May 2020) at Columbia University's Graduate School of Architecture Planning and Preservation (GSAPP). </span>
+            <span class="highlightInfo"> Grappling with what it means to generate ideas about, visualize, and create physical and networked spaces, particularly when it comes to cities and the people that inhabit them<!-- - with the help of design and research tools, data analysis and other digital technologies -->.</span>
+            <span class="basicInfo">  See more of my <a href="../pdf/TolaOniyangi_Portfolio.pdf"  target="_blank"> work </a> and <a href="../pdf/TolaOniyangi_Resume.pdf"  target="_blank"> experience </a>, find me on <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn, </a> <!-- and <a href="https://github.com/tolaoniyangi"  target="_blank"> Github,</a> -->  and contact me at tola.oniyangi@columbia.edu</span>
+          </p>
+        </div>
 
         <!-- DMC  -->
         <div class="col-md-4 col-sm-6 item">
