--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <span class="highlightInfo"> Dual-degree Architecture and Urban Planning Master's student </span>
               <span class="basicInfo"> (graduating May 2020) at Columbia University's Graduate School of Architecture Planning and Preservation (GSAPP). </span>
             <span class="highlightInfo"> Grappling with what it means to generate ideas about, visualize, and create physical and networked spaces, particularly when it comes to cities and the people that inhabit them<!-- - with the help of design and research tools, data analysis and other digital technologies -->.</span>
-            <span class="basicInfo">  See more of my <a href="../pdf/TolaOniyangi_Portfolio.pdf"  target="_blank"> work </a> and <a href="../pdf/TolaOniyangi_Resume.pdf"  target="_blank"> experience </a>, find me on <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn, </a> <!-- and <a href="https://github.com/tolaoniyangi"  target="_blank"> Github,</a> -->  and contact me at tola.oniyangi@columbia.edu</span>
+            <span class="basicInfo">  See more of my <a href="pdf/TolaOniyangi_Portfolio.pdf"  target="_blank"> work </a> and <a href="pdf/TolaOniyangi_Resume.pdf"  target="_blank"> experience </a>, find me on <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn, </a> <!-- and <a href="https://github.com/tolaoniyangi"  target="_blank"> Github,</a> -->  and contact me at tola.oniyangi@columbia.edu</span>
           </p>
         </div>
 
