did I already say this is neverending?

--- a/projects/tech-theatre.html
+++ b/projects/tech-theatre.html
@@ -44,10 +44,22 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2> What does it mean for a theatre to straddle the threshold between a natural landscape and an urban condition? </h2>
-          <p> This <a href="../pdf/tech-theatre_CD-set.pdf"  target="_blank"> redevelopment </a> and expansion of a theatre in Greenpoint was done primarily from a technical perspective. The site context gives credence to the concept to integrate the sloping terrain of the park, which descends into the river, with the hard edge and scale of the warehouse buildings towards the north. Decisions such as louvers controlling light entering the building depending on the orientation, green walls on the interior and throughout the accessible sloping roof, and an operable glass partition between the theatre and the park opposite it take into account a relationship between people, nature, and art. The building’s schematic documents, design documents and construction documents include mapped elevations, roadmaps with typical and atypical details, structural plans and cross sections, reflected ceiling plans, floor plans, structural details, and wall sections among other things. </p> 
+          <p> This <a href="../pdf/theatre_CD-set.pdf"  target="_blank"> redevelopment </a> and expansion of a theatre in Greenpoint was done primarily from a technical perspective. The site context gives credence to the concept to integrate the sloping terrain of the park, which descends into the river, with the hard edge and scale of the warehouse buildings towards the north. Decisions such as louvers controlling light entering the building depending on the orientation, green walls on the interior and throughout the accessible sloping roof, and an operable glass partition between the theatre and the park opposite it take into account a relationship between people, nature, and art. The building’s schematic documents, design documents and construction documents include mapped elevations, roadmaps with typical and atypical details, structural plans and cross sections, reflected ceiling plans, floor plans, structural details, and wall sections among other things. </p> 
           <p class="additionalInfo"> In collaboration with Anna Creatura, Cris Liu and Yang Qi. Fall 2018. Architectural Technology IV: Building Systems Integration. Professor: Sarrah Khan. </p>    
         </div>
       </div></div>
+
+<!--       <div class="row">
+        <div class="col-md-9">
+          <br>
+            <div id="linkedImage">
+              <a href="../pdf/theatre_CD-set.pdf" target="_blank">
+                <img src="../img/tech-theatre_concept.jpg">
+              </a>   
+            </div>
+        </div>
+      </div> -->
+
     </div> <!-- container  -->
    </div><!-- sidepanel  -->
 
@@ -57,13 +69,13 @@
       <div class="row">
         <div class="col-md-9">
           
-          <div class="col-md-12">
+          <!-- <div class="col-md-12"> -->
             <div id="linkedImage">
-              <a href="../pdf/tech-theatre_CD-set.pdf" target="_blank">
+              <a href="../pdf/theatre_CD-set.pdf" target="_blank">
                 <img src="../img/tech-theatre_concept.jpg">
               </a>   
             </div>
-          </div>
+          <!-- </div> -->
 
 
           <div class="footer">
