--- a/projects/citibike.html
+++ b/projects/citibike.html
@@ -50,16 +50,17 @@
 
         <div class="row">
           <div class="col-md-9">
-            <br>
-          <!-- <div class="col-md-12"> -->
+            <br><br>
               <div id="linkedImage">
                 <a href="../pdf/citibike_FinalReport.pdf" target="_blank">
                   <img src="../img/citibike_FinalCover.jpg">
+                  <div class="overlay-link">
+                    View Project
+                  </div>                  
                 </a>   
-              </div>
           </div>
         </div>
-        
+
       </div>
 
       </div></div>
