fixing size of images

--- a/projects/citibike.html
+++ b/projects/citibike.html
@@ -93,10 +93,10 @@
           
           <div class="col-md-12">
             <div class="col-md-6">
-              <img src="../img/citibike_NetworkMethodology.png"> 
+              <img src="../img/citibike_NetworkMethodology.jpg"> 
             </div>
             <div class="col-md-6">
-              <img src="../img/citibike_DemographicsMethodology.png"> 
+              <img src="../img/citibike_DemographicsMethodology.jpg"> 
             </div>
           </div>
 
