--- a/projects/urbansprawl.html
+++ b/projects/urbansprawl.html
@@ -44,7 +44,7 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2>Can a machine learning model be trained to predict urban sprawl? </h2>
-          <p> In this project, a model was fed historic images of three cities using Python in order to predict future trends in urbanization. Once it learned to categorize built and unbuilt areas of said cities, it could categorize them and identify their trajectories over time. Applying this logic to future projections of urban change, the model was thus was able to predict future sprawl. </p> 
+          <p> In this project, a model was fed historic images of three cities using Python in order to predict future trends in urbanization. Once it learned to categorize built and unbuilt areas of said cities, it could categorize them and identify their trajectories over time. Applying this logic to future projections of urban change, the model was thus was able to predict future sprawl. The documentation can be found <a href="https://github.com/tolaoniyangi/dmc/blob/master/notebooks/Project/Training2_FinalProject.ipynb"> here. </a> </p> 
           <p class="additionalInfo"> Fall 2016. Data Mining the City - taught by Danil Nagy. In collaboration with Marwah Garib, Vrinda Sharma and Kun Qian. </p>    
         </div>
       </div></div>
