--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -61,13 +61,13 @@
 
           <div class="col-md-12">
             <div class="col-md-4">
-              <img src="../img/ADR_icon_1st.png"> 
+              <img src="../img/ADR_icon_1st.jpg"> 
             </div>
             <div class="col-md-4">
               <img src="../img/ADR_icon_2nd.jpg"> 
             </div>
             <div class="col-md-4">
-              <img src="../img/ADR_icon_3rd.png"> 
+              <img src="../img/ADR_icon_3rd.jpg"> 
             </div>
           </div>
 
