changed files to smaller images

--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -82,13 +82,13 @@
 
           <div class="col-md-12">
             <div class="col-md-4">
-              <img src="../img/libraryproject_studymodel1.jpg"> 
+              <img src="../img/libraryproject_studymodel1.JPG"> 
             </div>
             <div class="col-md-4">
-              <img src="../img/libraryproject_studymodel2.jpg"> 
+              <img src="../img/libraryproject_studymodel2.JPG"> 
             </div>
             <div class="col-md-4">
-              <img src="../img/libraryproject_studymodel3.jpg"> 
+              <img src="../img/libraryproject_studymodel3.JPG"> 
             </div>
           </div>
 
