updated lbrary project & global trajectories

--- a/projects/libraryproject.html
+++ b/projects/libraryproject.html
@@ -117,10 +117,13 @@
             <img src="../img/libraryproject_section.png"> 
           </div>
 
+          <div class="col-md-8">
+            <img src="../img/libraryproject_plans.gif"> 
+          </div>
           <div class="col-md-6">
             <img src="../img/libraryproject_circulation_program.png"> 
           </div>   
-          <div class="col-md-8">
+<!--           <div class="col-md-8">
             <img src="../img/libraryproject_1stFloor.jpg"> 
           </div>
           <div class="col-md-8">
@@ -134,7 +137,7 @@
           </div>
           <div class="col-md-8">
             <img src="../img/libraryproject_5thFloor.jpg"> 
-          </div>
+          </div> -->
 
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
