--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div><!--/.item  -->
 
         <!-- TECH - theatre -->
-        <div class="col-md-4 col-sm-6 item">
+<!--         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="design"> 
             <a href="projects/tech-theatre.html">
               <img src="img/intro_tech-theatre.gif" alt="">
@@ -130,7 +130,8 @@
               <h3 class="thumbnailTitle"> City, Theatre, Park </h3>
             </a>
           </div></div>
-        </div><!--/.item  -->
+        </div> -->
+        <!--/.item  -->
         
         <!-- GIS final report : citibike -->
         <div class="col-md-4 col-sm-6 item">
