--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
           </p>
         </div>
 
+        <!-- Puerto Rico  -->
+        <div class="col-md-4 col-sm-6 item">
+            <div class="thumbnail"> <div id="design"> 
+              <a href="projects/wastespace.html">
+                <img src="img/wastespace_outsiderender.jpg" alt="">
+                <h4 class="thumbnailQuestion">How can we limit the volume of waste that reaches the landfill & generate employment opportunities for women? </h4>
+                <h3 class="thumbnailTitle"> Wastespace </h3>
+              </a>
+            </div></div>
+        </div><!--/.item  -->
+
+        <!-- GEN DES  -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> <div id="design"> 
+            <a href="projects/gendes.html">
+              <img src="img/gendes_selected-output.gif" alt="">
+              <h4 class="thumbnailQuestion"> Can we automate a space that hovers between the states of being exposed and enclosed? </h4>
+              <h3 class="thumbnailTitle"> Liminal Space </h3>
+            </a>
+          </div></div>
+        </div><!--/.item  -->
+
         <!-- DMC  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> <div id="analysis"> 
